updated profile with resume

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>About Jennifer</title>
+    <title>Jennifer Harden</title>
+    <link rel="icon" href="./assets/images/script.png">
 
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -281,10 +282,11 @@
                         </div>
                     </div>
                     <div class="text-left linkedin-link">
-                        Check more details about my work experience on my
+                        Check more details about my work experience on my linkedin profile
                         <a href="https://www.linkedin.com/in/jennifer-harden-a61423135/" target="_blank" rel="noopener">
-                            <i class="fab fa-linkedin"></i></a>
-                        profile.
+                            <i class="fab fa-linkedin fa-2x"></i></a>
+                        or visit my resume <a href="./assets/Resume.pdf">
+                            <i class="fas fa-file fa-2x"></i></a>
                     </div>
                     <br>
 
