--- a/index.html
+++ b/index.html
@@ -90,46 +90,96 @@
                     </div>
 
                     <div class="row" id="portfolio-row">
-                        <a href="https://jenharden.github.io/Word-Guess-Game/">
-                            <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                <img id="Movie Quest" src="./assets/images/movie_quest_thumbnail.jpg"
-                                    alt="movie guess game">
-                                <div class="portfolio-app-title">Movie Quest</div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://jenharden.github.io/Word-Guess-Game/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img class="card-img-top" id="Movie Quest"
+                                        src="./assets/images/movie_quest_thumbnail.jpg" alt="movie guess game">
+                                    <div class="portfolio-app-title">Movie Quest</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    HTML 5, CSS, JavaScript, Bootstrap 4 and jQuery 3
+                                </p>
                             </div>
-                        </a>
-                        <a href="https://jenharden.github.io/unit-4-game/">
-                            <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                <img id="Transformers Battle" src="./assets/images/transformer_battle_thumbnail.jpg"
-                                    alt="G1 cartoon transformers ship">
-                                <div class="portfolio-app-title">Transformers Battle</div>
+                        </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://jenharden.github.io/unit-4-game/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="Transformers Battle" src="./assets/images/transformer_battle_thumbnail.jpg"
+                                        alt="G1 cartoon transformers ship">
+                                    <div class="portfolio-app-title">Transformers Battle</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    HTML 5, CSS, JavaScript, Bootstrap 4 and jQuery 3
+                                </p>
                             </div>
-                        </a>
-                        <a href="https://jenharden.github.io/Train-Schedule/">
-                            <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                <img id="Train" src="./assets/images/trainthumbnail.jpg" alt="passenger train">
-                                <div class="portfolio-app-title">Train Schedule</div>
+                        </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://jenharden.github.io/Train-Schedule/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="Train" src="./assets/images/trainthumbnail.jpg" alt="passenger train">
+                                    <div class="portfolio-app-title">Train Schedule</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    HTML 5, CSS, JavaScript, jQuery 3, Firebase and Moment.js
+                                </p>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="row" id="portfolio-row">
-                        <a href="https://jenharden.github.io/TriviaGame/">
-                            <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                <img id="Trivia" src="./assets/images/triviathumbnail.jpg" alt="Harry Potter clouds">
-                                <div class="portfolio-app-title">Trivia</div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://jenharden.github.io/TriviaGame/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="Trivia" src="./assets/images/triviathumbnail.jpg"
+                                        alt="Harry Potter clouds">
+                                    <div class="portfolio-app-title">Trivia</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    HTML 5, CSS, JavaScript, Bootstrap 4 and jQuery 3
+                                </p>
                             </div>
-                        </a>
-                        <a href="https://jenharden.github.io/GifTastic/">
-                            <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                <img id="GifTastic" src="./assets/images/giftasticthumbnail.jpg" alt="Disney castle">
-                                <div class="portfolio-app-title">GifTastic Movies</div>
+                        </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://jenharden.github.io/GifTastic/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="GifTastic" src="./assets/images/giftasticthumbnail.jpg"
+                                        alt="Disney castle">
+                                    <div class="portfolio-app-title">GifTastic Movies</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    HTML 5, CSS, JavaScript, jQuery 3 and API calls
+                                </p>
                             </div>
-                        </a>
-                        <a>
-                            <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                <img id="Rutgers" src="./assets/images/widget.jpg" alt="compass and globes">
-                                <div class="portfolio-app-title">Rutgers Info Widget</div>
+                        </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://github.com/JenHarden/liri-node-app" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="Rutgers" src="./assets/images/widget.jpg" alt="compass and globes">
+                                    <div class="portfolio-app-title">Liri Bot</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    node.js, node package manager (NPM) and API calls
+                                </p>
                             </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
                 <br>
