--- a/index.html
+++ b/index.html
@@ -134,6 +134,20 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://github.com/JenHarden/Constructor-Word-Guess" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="Train" src="./assets/images/words.jpeg" alt="work tiles on mirror">
+                                    <div class="portfolio-app-title">Constructor-Word-Guess</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    node.js, node package manager (NPM), JavaScript constructor functions
+                                </p>
+                            </div>
+                        </div>
                     </div>
                     <div class="row" id="portfolio-row">
                         <div class="card" style="width: 280px">
