added Bamazon application to portfolio

--- a/index.html
+++ b/index.html
@@ -121,6 +121,23 @@
                             </div>
                         </div>
                         <div class="card" style="width: 280px">
+                            <a href="https://jenharden.github.io/TriviaGame/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="Trivia" src="./assets/images/triviathumbnail.jpg"
+                                        alt="Harry Potter clouds">
+                                    <div class="portfolio-app-title">Trivia</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    HTML 5, CSS, JavaScript, Bootstrap 4 and jQuery 3
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" id="portfolio-row">
+                        <div class="card" style="width: 280px">
                             <a href="https://jenharden.github.io/Train-Schedule/" target="_blank">
                                 <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
                                     <img id="Train" src="./assets/images/trainthumbnail.jpg" alt="passenger train">
@@ -131,6 +148,21 @@
                                 <h5 class="card-title">Technology Used</h5>
                                 <p class="card-text">
                                     HTML 5, CSS, JavaScript, jQuery 3, Firebase and Moment.js
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://jenharden.github.io/GifTastic/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="GifTastic" src="./assets/images/giftasticthumbnail.jpg"
+                                        alt="Disney castle">
+                                    <div class="portfolio-app-title">GifTastic Movies</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    HTML 5, CSS, JavaScript, jQuery 3 and API calls
                                 </p>
                             </div>
                         </div>
@@ -151,36 +183,6 @@
                     </div>
                     <div class="row" id="portfolio-row">
                         <div class="card" style="width: 280px">
-                            <a href="https://jenharden.github.io/TriviaGame/" target="_blank">
-                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                    <img id="Trivia" src="./assets/images/triviathumbnail.jpg"
-                                        alt="Harry Potter clouds">
-                                    <div class="portfolio-app-title">Trivia</div>
-                                </div>
-                            </a>
-                            <div class="card-body">
-                                <h5 class="card-title">Technology Used</h5>
-                                <p class="card-text">
-                                    HTML 5, CSS, JavaScript, Bootstrap 4 and jQuery 3
-                                </p>
-                            </div>
-                        </div>
-                        <div class="card" style="width: 280px">
-                            <a href="https://jenharden.github.io/GifTastic/" target="_blank">
-                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
-                                    <img id="GifTastic" src="./assets/images/giftasticthumbnail.jpg"
-                                        alt="Disney castle">
-                                    <div class="portfolio-app-title">GifTastic Movies</div>
-                                </div>
-                            </a>
-                            <div class="card-body">
-                                <h5 class="card-title">Technology Used</h5>
-                                <p class="card-text">
-                                    HTML 5, CSS, JavaScript, jQuery 3 and API calls
-                                </p>
-                            </div>
-                        </div>
-                        <div class="card" style="width: 280px">
                             <a href="https://github.com/JenHarden/liri-node-app" target="_blank">
                                 <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
                                     <img id="Rutgers" src="./assets/images/widget.jpg" alt="compass and globes">
@@ -191,6 +193,20 @@
                                 <h5 class="card-title">Technology Used</h5>
                                 <p class="card-text">
                                     node.js, node package manager (NPM) and API calls
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://github.com/JenHarden/bamazon" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="bamazon" src="./assets/images/bamazon.jpg" alt="online storefront">
+                                    <div class="portfolio-app-title">Bamazon</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    node.js, node package manager (NPM) and MySQL Workbench
                                 </p>
                             </div>
                         </div>
