--- a/index.html
+++ b/index.html
@@ -210,6 +210,21 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://github.com/JenHarden/FriendFinder" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="friendFinder" src="./assets/images/friends.jpeg"
+                                        alt="two hands holding pinkies together">
+                                    <div class="portfolio-app-title">Friend Finder</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    node.js, node package manager (NPM) and Express
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <br>
