udpated portfolio with BurgerGrille application

--- a/index.html
+++ b/index.html
@@ -226,6 +226,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row" id="portfolio-row">
+                        <div class="card" style="width: 280px">
+                            <a href="https://github.com/JenHarden/BurgerGrille" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="BurgerGrille" src="./assets/images/burgergrill.jpg" alt="burgers on grill">
+                                    <div class="portfolio-app-title">Burger Grille</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    MySQL, node.js, node package manager (NPM), express and handlebars
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <br>
                 <h4 class="section-title" id="item-3">&lt; Skills &gt;</h4>
