udpated portfolio with project 2

--- a/index.html
+++ b/index.html
@@ -237,7 +237,21 @@
                             <div class="card-body">
                                 <h5 class="card-title">Technology Used</h5>
                                 <p class="card-text">
-                                    MySQL, node.js, node package manager (NPM), express and handlebars
+                                    MySQL, node.js, node package manager (NPM), express and Handlebars.js
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 280px">
+                            <a href="https://pacific-savannah-43560.herokuapp.com/" target="_blank">
+                                <div class="col-12 col-md-6 col-lg-4" id="portfolio-app">
+                                    <img id="Team" src="./assets/images/team.jpg" alt="hands locked together">
+                                    <div class="portfolio-app-title">Lean To</div>
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Technology Used</h5>
+                                <p class="card-text">
+                                    MySQL, node.js, JavaScript, jQuery, Materialize, MVC Paradigm, node package manager (NPM), express and Handlebars.js
                                 </p>
                             </div>
                         </div>
